--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+dj-database-url==0.5.0
 Django==4.2.13
 Flask==3.0.3
 Flask-Migrate==4.0.7
