--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.13.1
 asgiref==3.8.1
+bleach==6.1.0
 blinker==1.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 dj-database-url==0.5.0
 Django==4.2.13
+django-summernote==0.8.20.0
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
@@ -18,10 +20,11 @@ MarkupSafe==2.1.5
 psycopg2==2.9.9
 requests==2.31.0
 setuptools==69.5.1
+six==1.16.0
 SQLAlchemy==2.0.29
 sqlparse==0.5.0
 typing_extensions==4.11.0
 urllib3==2.2.1
+webencodings==0.5.1
 Werkzeug==3.0.2
-whitenoise==6.5.0
-django-summernote~=0.8.20.0
+whitenoise==5.3.0
