--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ asgiref==3.8.1
 bleach==6.1.0
 blinker==1.8.1
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.7
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.2.13
+django-allauth==0.57.2
 django-summernote==0.8.20.0
 Flask==3.0.3
 Flask-Migrate==4.0.7
@@ -17,8 +21,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.3
 Mako==1.3.5
 MarkupSafe==2.1.5
+oauthlib==3.2.2
 psycopg2==2.9.9
+pycparser==2.22
+PyJWT==2.8.0
+python3-openid==3.2.0
 requests==2.31.0
+requests-oauthlib==2.0.0
 setuptools==69.5.1
 six==1.16.0
 SQLAlchemy==2.0.29
